--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
 			<div class="layui-tab layui-tab-brief">
 				<ul class="layui-tab-title">
 					<li class="game layui-this">游戏设置</li>
+					<li class="personal">个性化设置</li>
 					<li class="music">音乐设置</li>
 				</ul>
 				<div class="layui-tab-content">
@@ -326,9 +327,9 @@
 							<div class="layui-form-mid layui-word-aux">单位：棋子个数</div>
 						</div>
 						<div class="layui-form-item" style="display: none;">
-							<label class="layui-form-label">四维长度</label>
+							<label class="layui-form-label">四维厚度</label>
 							<div class="layui-input-inline">
-								<input type="number" name="lengthFour" min="3" max="30" init="10" value="10" class="layui-input" />
+								<input type="number" name="width" min="3" max="30" init="10" value="10" class="layui-input" />
 							</div>
 							<div class="layui-form-mid layui-word-aux">单位：棋子个数</div>
 						</div>
@@ -340,12 +341,28 @@
 							</div>
 							<div class="layui-form-mid layui-word-aux">指在线的交点处 或围成的方格内落子</div>
 						</div>
+					</form>
+					<form class="personal layui-tab-item layui-form" onsubmit="return false;">
 						<div class="layui-form-item">
 							<label class="layui-form-label">防误触摸式</label>
 							<div class="layui-input-inline">
 								<input type="checkbox" name="mistake" class="mistake" lay-skin="switch" lay-text="开启|关闭" />
 							</div>
 							<div class="layui-form-mid layui-word-aux">即是否需要两次点击落子以防止误触</div>
+						</div>
+						<div class="layui-form-item">
+							<label class="layui-form-label">天空盒</label>
+							<div class="layui-input-inline">
+								<input type="checkbox" name="skybox" class="skybox" lay-skin="switch" lay-text="显示|关闭" />
+							</div>
+							<div class="layui-form-mid layui-word-aux">（针对3D/4D五子棋）开启后将可边下棋边欣赏每天720次的日出日落</div>
+						</div>
+						<div class="layui-form-item">
+							<label class="layui-form-label">棋盘边界</label>
+							<div class="layui-input-inline">
+								<input type="checkbox" name="border" class="border" lay-skin="switch" lay-text="显示|关闭" />
+							</div>
+							<div class="layui-form-mid layui-word-aux">（针对3D/4D五子棋）将在棋盘边界显示立方体边框，以标注提醒</div>
 						</div>
 					</form>
 					<form class="music layui-tab-item layui-form" onsubmit="return false;">
@@ -418,7 +435,7 @@ $("button, input[type='button'], .layui-tab-title *, #set").click(function(){
 	playEffect(); //播放音效
 });
 setTimeout(function(){
-	$("input[type='radio'], input[type='checkbox']").next().click(function(){
+	$("input[type='radio'], input[type='checkbox'], div.layer-form-switch").next().click(function(){
 		playEffect(); //播放音效
 	});
 }, 100);
@@ -426,8 +443,10 @@ setTimeout(function(){
 
 
 const setting_game = JSON.parse(localStorage.getItem("五子棋_游戏设置") || "{}"),
+	setting_personal = JSON.parse(localStorage.getItem("五子棋_个性化设置") || "{}"),
 	setting_music = JSON.parse(localStorage.getItem("五子棋_音乐设置") || "{}"),
 	form_game = $("#settings form.game")[0],
+	form_personal = $("#settings form.personal")[0],
 	form_music = $("#settings form.music")[0];
 
 let inputD = 2;
@@ -443,7 +462,7 @@ function setD(D){
 			form_game.cols.init = form_game.rows.init = 19; //初始值为19
 			form_game.cols.value = form_game.rows.value = 19; //值为19
 			$(form_game.depth).parent().parent().hide("slow");
-			$(form_game.lengthFour).parent().parent().hide("slow");
+			$(form_game.width).parent().parent().hide("slow");
 			$(form_game.place).parent().parent().show("slow");
 			break;
 			
@@ -457,7 +476,7 @@ function setD(D){
 			form_game.cols.init = form_game.rows.init = form_game.depth.init = 10; //初始值为10
 			form_game.cols.value = form_game.rows.value = form_game.depth.value = 10; //值为10
 			$(form_game.depth).parent().parent().show("slow");
-			$(form_game.lengthFour).parent().parent().hide("slow");
+			$(form_game.width).parent().parent().hide("slow");
 			$(form_game.place).parent().parent().hide("slow");
 			break;
 			
@@ -468,10 +487,10 @@ function setD(D){
 				.siblings().addClass("layui-btn-primary layui-border-green")
 				.parent().parent().children(".text")
 				.html("4D：四维空间，挑战最强大脑");
-			form_game.cols.init = form_game.rows.init = form_game.depth.init = form_game.lengthFour.init = 10; //初始值为10
-			form_game.cols.value = form_game.rows.value = form_game.depth.value = form_game.lengthFour.value = 10; //值为10
+			form_game.cols.init = form_game.rows.init = form_game.depth.init = form_game.width.init = 10; //初始值为10
+			form_game.cols.value = form_game.rows.value = form_game.depth.value = form_game.width.value = 10; //值为10
 			$(form_game.depth).parent().parent().show("slow");
-			$(form_game.lengthFour).parent().parent().show("slow");
+			$(form_game.width).parent().parent().show("slow");
 			$(form_game.place).parent().parent().hide("slow");
 			break;
 	}
@@ -479,6 +498,7 @@ function setD(D){
 
 function saveSetting(){ //保存设置
 	localStorage.setItem("五子棋_游戏设置", JSON.stringify(setting_game));
+	localStorage.setItem("五子棋_个性化设置", JSON.stringify(setting_personal));
 	localStorage.setItem("五子棋_音乐设置", JSON.stringify(setting_music));
 }
 function readSetting(){ //加载设置
@@ -487,37 +507,40 @@ function readSetting(){ //加载设置
 	setting_game.cols = setting_game.cols || 19;
 	setting_game.rows = setting_game.rows || 19;
 	setting_game.depth = setting_game.depth || 10;
-	setting_game.lengthFour = setting_game.lengthFour || 10;
+	setting_game.width = setting_game.width || 10;
 	setting_game.place = setting_game.place || 0;
+	
+	setting_personal.skybox = OR(setting_personal.skybox, true);
+	setting_personal.border = OR(setting_personal.border, true);
+	
 	setting_music.bgm = setting_music.bgm || "piano";
 	setting_music.effect = setting_music.effect || "stars";
+	
 	
 	setD(setting_game.D);
 	form_game.n.value = setting_game.N;
 	form_game.cols.value = setting_game.cols;
 	form_game.rows.value = setting_game.rows;
 	form_game.depth.value = setting_game.depth;
-	form_game.lengthFour.value = setting_game.lengthFour;
+	form_game.width.value = setting_game.width;
 	form_game.place[+setting_game.place].checked = true;
-	if ( setting_game.mistake !== undefined ){ //有设置
-		if (+setting_game.mistake == 0){
-			$(form_game).find("input.mistake")[0].checked = false;
-		}else{
-			$(form_game).find("input.mistake")[0].checked = true;
-		}
+	
+	if ( setting_personal.mistake !== undefined ){ //有设置
+		$(form_personal).find("input.mistake")[0].checked = !!setting_personal.mistake;
 	}else{ //无设置 自动
 		if (device){ //手机
-			$(form_game).find("input.mistake")[0].checked = true;
-			setting_game.mistake = true;
+			setting_personal.mistake = true;
 		}else{ //电脑
-			$(form_game).find("input.mistake")[0].checked = false;
-			setting_game.mistake = false;
+			setting_personal.mistake = false;
 		}
+		$(form_personal).find("input.mistake")[0].checked = setting_personal.mistake;
 	}
+	$(form_personal).find("input.skybox")[0].checked = setting_personal.skybox;
+	$(form_personal).find("input.border")[0].checked = setting_personal.border;
 	
 	form_music.bgm_custom.value = MUSICS.piano; //默认：deskgood作曲钢琴曲
 	form_music.effect_custom.value = MUSICS.stars; //默认：小星星
-	if (["none", "piano"].indexOf(setting_music.bgm) == -1){
+	if (["none", "piano"].indexOf(setting_music.bgm) == -1){ //自定义
 		form_music.bgm.value = "custom";
 		form_music.bgm_custom.value = setting_music.bgm;
 		$(form_music.bgm_custom).parent().parent().show();
@@ -525,7 +548,7 @@ function readSetting(){ //加载设置
 		form_music.bgm.value = setting_music.bgm;
 		$(form_music.bgm_custom).parent().parent().hide();
 	}
-	if (["none", "stars"].indexOf(setting_music.effect) == -1){
+	if (["none", "stars"].indexOf(setting_music.effect) == -1){ //自定义
 		form_music.effect.value = "custom";
 		form_music.effect_custom.value = setting_music.effect;
 		$(form_music.effect_custom).parent().parent().show();
@@ -553,7 +576,8 @@ $(form_game).find("button.four").click(function(){
 	setD(4);
 });
 
-let effectTest; //音效测试
+let bgmTest, //bgm测试
+	effectTest; //音效测试
 layui.use("form", function(){
 	const form = layui.form;
 	//背景音乐自定义
@@ -565,9 +589,11 @@ layui.use("form", function(){
 			$(form_music.bgm_custom).parent().parent().hide("slow");
 		}
 		if (data.value == "piano"){ //测试播放
-			if (bgm) //可能none未播放
-				bgm.setStop(true);
-			bgm = new Music(MUSICS.piano, 6, 72).play();
+			if (!bgm) //未播放bgm
+				bgmTest = new Music(MUSICS.piano, 6, 72).play();
+		}else if (data.value == "none"){ //无 停止播放
+			if (bgmTest)
+				bgmTest.setStop(true); //停止bgm测试
 		}
 	});
 	//音效自定义
@@ -582,6 +608,9 @@ layui.use("form", function(){
 			if (effectTest)
 				effectTest.setStop(true);
 			effectTest = new Music(MUSICS.stars, 6, 72).play();
+		}else if (data.value == "none"){ //无 停止播放
+			if (effectTest)
+				effectTest.setStop(true); //停止音效测试
 		}
 	});
 });
@@ -622,6 +651,7 @@ $("#two").click(function(){
 			go("two_3D.html");
 			break;
 		case 4:
+			go("two_4D.html");
 			break;
 	}
 });
@@ -636,6 +666,7 @@ $("#one").click(function(){
 			go("one_3D.html");
 			break;
 		case 4:
+			go("one_4D.html");
 			break;
 	}
 });
@@ -663,14 +694,19 @@ $("#settings button.cancel").click(function(){
 $("#settings button.save").click(function(){
 	if (effectTest)
 		effectTest.setStop(true); //停止音效测试
+	
 	setting_game.D = inputD;
 	setting_game.N = +form_game.n.value;
 	setting_game.cols = +form_game.cols.value;
 	setting_game.rows = +form_game.rows.value;
 	setting_game.depth = +form_game.depth.value;
-	setting_game.lengthFour = +form_game.lengthFour.value;
+	setting_game.width = +form_game.width.value;
 	setting_game.place = +form_game.place[1].checked;
-	setting_game.mistake = form_game.mistake.checked;
+	
+	setting_personal.mistake = form_personal.mistake.checked;
+	setting_personal.skybox = form_personal.skybox.checked;
+	setting_personal.border = form_personal.border.checked;
+	
 	if (form_music.bgm.value == "custom"){
 		setting_music.bgm = form_music.bgm_custom.value
 	}else{
@@ -681,9 +717,26 @@ $("#settings button.save").click(function(){
 	}else{
 		setting_music.effect = form_music.effect.value;
 	}
+	
 	saveSetting();
 	layer.msg("设置成功");
 	$("#settings").slideUp("slow");
+});
+
+//双击
+$("body > h1").on("dblclick",function(){
+	for (let i=0; i<36*Math.random()+36; i++){
+		$("body").animate({
+			left: (Math.random()*6-3)+"%",
+			top: (Math.random()*6-3)+"%",
+			opacity: 1
+		},10);
+	}
+	$("body").animate({
+		left: "0%",
+		top: "0%",
+		opacity: 1
+	},10);
 });
 </script>
 		
