--- a/one_3D.html
+++ b/one_3D.html
@@ -477,16 +477,17 @@ class Board{
 		
 		this.spacing = spacing; //间隔
 		this.lines = { //划线
+			border: [], //棋盘边界
+			circle: [], //圆圈标记
 			win: [], //获胜
-			analyse: [], //分析
-			circle: [] //圆圈标记
+			analyse: [] //分析
 		};
 	}
 	
 	
 	/* 场景 */
 	//载入场景
-	loadScene(){
+	loadScene(skyboxDisplay=true, borderDisplay=true){
 		//stats.js
 		this.stats = new Stats();
 		this.stats.showPanel(0);
@@ -579,76 +580,158 @@ class Board{
 		this.materials.winLines = material;
 		
 		
+		//通用动画缓动函数
+		this.easingFunction = new BABYLON.CircleEase(); //缓动函数
+		this.easingFunction.setEasingMode( BABYLON.EasingFunction.EASINGMODE_EASEINOUT ); //模式
+		
+		
 		//生成所有占位符和棋子
 		this.places = Array.new(null, this.columns, this.depth);
 		this.pieces = Array.new(null, this.columns, this.rows, this.depth);
 		//this.clear();
 		
 		
-		//通用动画缓动函数
-		this.easingFunction = new BABYLON.CircleEase(); //缓动函数
-		this.easingFunction.setEasingMode( BABYLON.EasingFunction.EASINGMODE_EASEINOUT ); //模式
+		//生成棋盘边界
+		if (borderDisplay){ //允许显示
+			const paths = [];
+			paths[0] = [ //上面
+				new BABYLON.Vector3(
+					...this.ijk2xyz(0, 0, 0)
+				),
+				new BABYLON.Vector3(
+					...this.ijk2xyz(this.columns-1, 0, 0)
+				),
+				new BABYLON.Vector3(
+					...this.ijk2xyz(this.columns-1, 0, this.depth-1)
+				),
+				new BABYLON.Vector3(
+					...this.ijk2xyz(0, 0, this.depth-1)
+				),
+				new BABYLON.Vector3( //闭合
+					...this.ijk2xyz(0, 0, 0)
+				)
+			];
+			paths[1] = [ //下面
+				new BABYLON.Vector3(
+					...this.ijk2xyz(0, this.rows-1, 0)
+				),
+				new BABYLON.Vector3(
+					...this.ijk2xyz(this.columns-1, this.rows-1, 0)
+				),
+				new BABYLON.Vector3(
+					...this.ijk2xyz(this.columns-1, this.rows-1, this.depth-1)
+				),
+				new BABYLON.Vector3(
+					...this.ijk2xyz(0, this.rows-1, this.depth-1)
+				),
+				new BABYLON.Vector3( //闭合
+					...this.ijk2xyz(0, this.rows-1, 0)
+				)
+			];
+			paths[2] = [
+				new BABYLON.Vector3(
+					...this.ijk2xyz(0, 0, 0)
+				),
+				new BABYLON.Vector3(
+					...this.ijk2xyz(0, this.rows-1, 0)
+				)
+			];
+			paths[3] = [
+				new BABYLON.Vector3(
+					...this.ijk2xyz(this.columns-1, 0, 0)
+				),
+				new BABYLON.Vector3(
+					...this.ijk2xyz(this.columns-1, this.rows-1, 0)
+				),
+			];
+			paths[4] = [
+				new BABYLON.Vector3(
+					...this.ijk2xyz(this.columns-1, 0, this.depth-1)
+				),
+				new BABYLON.Vector3(
+					...this.ijk2xyz(this.columns-1, this.rows-1, this.depth-1)
+				),
+			];
+			paths[5] = [
+				new BABYLON.Vector3(
+					...this.ijk2xyz(0, 0, this.depth-1)
+				),
+				new BABYLON.Vector3(
+					...this.ijk2xyz(0, this.rows-1, this.depth-1)
+				)
+			];
+			const color = new BABYLON.Color4(0.8, 0.8, 0, 1); //黄色
+			for (const path of paths){
+				const colors = new Array(path.length).fill(color);
+				const line = BABYLON.MeshBuilder.CreateLines("lines", {points: path, colors}, this.scene);
+				line.isPickable = false; //禁止点击
+				this.lines.border.push(line);
+				this.sizeInAnimation(line, 100);
+			}
+		}
 		
 		
 		//天空盒
-		const skybox = BABYLON.Mesh.CreateBox("skyBox", 1000, this.scene);
-		const skyMaterial = new BABYLON.SkyMaterial("skyMaterial", this.scene);
-		skyMaterial.backFaceCulling = false;
-		skybox.material = skyMaterial;
-		skybox.isPickable = false; //禁止点击
-		this.skybox = skybox;
-		
-		//太阳倾斜角
-		const skyInclinationAnimation = new BABYLON.Animation(
-			"animation_sky_inclination",
-			"material.inclination",
-			30,
-			BABYLON.Animation.ANIMATIONTYPE_FLOAT,
-			BABYLON.Animation.ANIMATIONLOOPMODE_RELATIVE
-		);
-		skyInclinationAnimation.setKeys([
-			{frame: 0, value: -0.5},
-			{frame: 30*60, value: 0.5}
-		]);
-		//太阳浑浊度
-		const skyTurbidityAnimation = new BABYLON.Animation(
-			"animation_sky_turbidity",
-			"material.turbidity",
-			30,
-			BABYLON.Animation.ANIMATIONTYPE_FLOAT,
-			BABYLON.Animation.ANIMATIONLOOPMODE_RELATIVE
-		);
-		skyTurbidityAnimation.setKeys([
-			{frame: 0, value: 2},
-			{frame: 30*30, value: 5},
-			{frame: 30*60, value: 2}
-		]);
-		//天空亮度
-		const skyLuminanceAnimation = new BABYLON.Animation(
-			"animation_sky_luminance",
-			"material.luminance",
-			30,
-			BABYLON.Animation.ANIMATIONTYPE_FLOAT,
-			BABYLON.Animation.ANIMATIONLOOPMODE_RELATIVE
-		);
-		skyLuminanceAnimation.setKeys([
-			{frame: 0, value: 1},
-			{frame: 30*30, value: 0.5},
-			{frame: 30*60, value: 1}
-		]);
-		skybox.animations = [skyInclinationAnimation, skyTurbidityAnimation, skyLuminanceAnimation];
-		this.scene.beginAnimation(skybox, 0, 30*60, true);
-		
-		setInterval(function(){
-			const x = (skyMaterial.inclination + 1) % 2,
-				y1 = 256/(1+Math.E**( -4*Math.E*(x-0.5) )),
-				y2 = 256/(1+Math.E**( 4*Math.E*(x-1.5) )),
-				min = ~~(256 - Math.min(y1, y2)),
-				color = `rgb(${min},${min},${min})`;
-			$("#main").css("color", color);
-			$("#layerControl, #heightControl, #layerControl > *, #heightControl > *")
-				.css("border-color", color);
-		}, 1000);
+		if (skyboxDisplay){ //允许显示
+			const skybox = BABYLON.Mesh.CreateBox("skyBox", 1000, this.scene);
+			const skyMaterial = new BABYLON.SkyMaterial("skyMaterial", this.scene);
+			skyMaterial.backFaceCulling = false;
+			skybox.material = skyMaterial;
+			skybox.isPickable = false; //禁止点击
+			this.skybox = skybox;
+			
+			//太阳倾斜角
+			const skyInclinationAnimation = new BABYLON.Animation(
+				"animation_sky_inclination",
+				"material.inclination",
+				30,
+				BABYLON.Animation.ANIMATIONTYPE_FLOAT,
+				BABYLON.Animation.ANIMATIONLOOPMODE_RELATIVE
+			);
+			skyInclinationAnimation.setKeys([
+				{frame: 0, value: -0.5},
+				{frame: 30*60, value: 0.5}
+			]);
+			//太阳浑浊度
+			const skyTurbidityAnimation = new BABYLON.Animation(
+				"animation_sky_turbidity",
+				"material.turbidity",
+				30,
+				BABYLON.Animation.ANIMATIONTYPE_FLOAT,
+				BABYLON.Animation.ANIMATIONLOOPMODE_RELATIVE
+			);
+			skyTurbidityAnimation.setKeys([
+				{frame: 0, value: 2},
+				{frame: 30*30, value: 5},
+				{frame: 30*60, value: 2}
+			]);
+			//天空亮度
+			const skyLuminanceAnimation = new BABYLON.Animation(
+				"animation_sky_luminance",
+				"material.luminance",
+				30,
+				BABYLON.Animation.ANIMATIONTYPE_FLOAT,
+				BABYLON.Animation.ANIMATIONLOOPMODE_RELATIVE
+			);
+			skyLuminanceAnimation.setKeys([
+				{frame: 0, value: 1},
+				{frame: 30*30, value: 0.5},
+				{frame: 30*60, value: 1}
+			]);
+			skybox.animations = [skyInclinationAnimation, skyTurbidityAnimation, skyLuminanceAnimation];
+			this.scene.beginAnimation(skybox, 0, 30*60, true);
+			
+			setInterval(function(){
+				const x = (skyMaterial.inclination + 1) % 2,
+					y1 = 256/(1+Math.E**( -4*Math.E*(x-0.5) )),
+					y2 = 256/(1+Math.E**( 4*Math.E*(x-1.5) )),
+					min = ~~(256 - Math.min(y1, y2)),
+					color = `rgb(${min},${min},${min})`;
+				$("#main").css("color", color);
+				$("#layerControl, #heightControl, #layerControl > *, #heightControl > *")
+					.css("border-color", color);
+			}, 1000);
+		}
 		
 		
 		//优化阻止dirty
@@ -840,9 +923,9 @@ class Board{
 				}
 				break;
 				
-			case "mistake": //防误触
+			/*case "mistake": //防误触
 				this.places[i][k].material = this.materials.mistake;
-				break;
+				break;*/
 				
 			case "black": //黑棋
 				if (mesh){ //有棋子
@@ -1198,7 +1281,8 @@ class Board{
 }
 
 
-const {N=5, cols=10, rows=10, depth=10, mistake=true} = JSON.parse(localStorage.getItem("五子棋_游戏设置") || "{}");
+const {N=5, cols=10, rows=10, depth=10} = JSON.parse(localStorage.getItem("五子棋_游戏设置") || "{}"),
+	{mistake=true, skybox=true, border=true} = JSON.parse(localStorage.getItem("五子棋_个性化设置") || "{}");
 const board = new Board({ //棋盘
 	canvas: $("#board")[0],
 	background: [0xff/0xff, 0xfa/0xff, 0xe8/0xff],
@@ -1246,10 +1330,10 @@ let waiting = false; //未等待
 
 const loadingId = layer.load(2);
 setTimeout(()=>{
-	board.loadScene();
+	board.loadScene(skybox, border);
 	layer.close(loadingId);
 	init();
-}, 1000);
+}, 600);
 
 
 let game = {
@@ -1403,17 +1487,17 @@ let game = {
 			$("#toolBtn > .review").removeAttr("disabled"); //解除禁用
 			
 			if (win === true){
-				game.winner = this.first;
+				this.winner = +this.first;
 				layer.alert(`${text}<br>历时${~~(t/60)}分${~~t%60}秒<br>${game.steps}步（${game.steps/2}回合）`,
 					{title: "胜利！", icon: 6}
 				);
 			}else if (win === false){
-				game.winner = 1-this.first;
+				this.winner = 1-this.first;
 				layer.alert(`${text}<br>历时${~~(t/60)}分${~~t%60}秒<br>${game.steps}步（${game.steps/2}回合）`,
 					{title: "你失败了！", icon: 5}
 				);
 			}else{
-				game.winner = this.first;
+				this.winner = null;
 				layer.alert(`${text}<br>历时${~~(t/60)}分${~~t%60}秒<br>${game.steps}步（${game.steps/2}回合）`,
 					{title: "游戏结束"}
 				);
