--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 		  s.parentNode.insertBefore(hm, s);
 		})();
 		</script>
-
+		
 	</head>
 	<body>
 		<h1>五子棋</h1>
@@ -417,6 +417,10 @@
 				<button class="cancel">取消</button>
 			</div>
 		</section>
+		
+		<footer>
+			<script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1280239115'%3E%3C/span%3E%3Cscript src='https://s4.cnzz.com/z_stat.php%3Fid%3D1280239115%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script>
+		</footer>
 		
 <script>
 let device;
