--- a/two_4D.html
+++ b/two_4D.html
@@ -268,6 +268,7 @@
 			padding: 0;
 			height: 6px;
 			width: 20px;
+			border: 1px solid #000;
 			border-radius: 999vw;
 			background-color: white;
 			transition: width 0.6s, background-color 0.6s;
@@ -294,6 +295,7 @@
 			display: block;
 			width: 100%;
 			height: 100%;
+			/* border: 1px solid #000; */
 			border-radius: 999vw;
 			background-color: #fff;
 		}
@@ -302,6 +304,8 @@
 			display: block;
 			width: 100%;
 			height: 15px;
+			/* z-index: -1; */
+			/* border: 1px solid #000; */
 			border-radius: 999vw;
 			background-color: #fff;
 			transform-origin: center top;
@@ -312,6 +316,8 @@
 			display: block;
 			width: 100%;
 			height: 15px;
+			/* z-index: -1; */
+			/* border: 1px solid #000; */
 			border-radius: 999vw;
 			background-color: #fff;
 			transform-origin: center top;
@@ -408,6 +414,16 @@
 		
 		<script src="./js/js_plus.min.js"></script> <!-- js+ -->
 		
+		<script>
+		var _hmt = _hmt || [];
+		(function() {
+		  var hm = document.createElement("script");
+		  hm.src = "https://hm.baidu.com/hm.js?c6b8f0ad7ec671e54d83e86a67280999";
+		  var s = document.getElementsByTagName("script")[0]; 
+		  s.parentNode.insertBefore(hm, s);
+		})();
+		</script>
+		
 	</head>
 	<body>
 		<header id="header">
@@ -482,6 +498,10 @@
 				</div>
 			</div>
 		</section>
+		
+		<footer>
+			<script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1280239115'%3E%3C/span%3E%3Cscript src='https://s4.cnzz.com/z_stat.php%3Fid%3D1280239115%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script>
+		</footer>
 		
 <script>
 //生成任意维数组
@@ -1620,13 +1640,13 @@ let game = {
 		timeWarning: { //时间警告
 			total: {
 				60: ["#f00", 1.2],
-				180: ["#fa0", 1.1],
-				600: ["inherit", 1]
+				300: ["#fa0", 1.1],
+				900: ["inherit", 1]
 			},
 			step: {
 				10: ["#f00", 1.5],
-				20: ["#fa0", 1.1],
-				45: ["inherit", 1]
+				30: ["#fa0", 1.1],
+				60: ["inherit", 1]
 			}
 		},
 		scores: {
@@ -2014,12 +2034,12 @@ $("#board").click(function(e){
 	if (!pickResult.hit) return; //未点击到物体
 	if ( !board.isBlock(pickResult.pickedMesh) ) return; //不是占位符和防误触
 	
+	playEffect(); //播放音效
+	
 	const pos = pickResult.pickedMesh.position,
 		[i, j, k] = board.xyz2ijk(pos.x, pos.y, pos.z),
 		l = board.widthRange;
 	console.log("click", pickResult, pos, [i, j, k, l])
-	
-	playEffect(); //播放音效
 	
 	waiting = true; //开始等待
 	
@@ -2121,6 +2141,9 @@ $("#axis").on("touchend", function(e){
 			board.widthAdd();
 		}else if (dy < -50){
 			board.widthSub();
+		}else if (dx == 0 && dy == 0 && e.target.tagName == "LI"){ //点击
+			console.log(e.target, e.target.tagName, $(e.target).prevAll().length)
+			board.setWidth($(e.target).prevAll().length);
 		}
 	}
 	touch.x = touch.y = null;
