--- a/two_4D.html
+++ b/two_4D.html
@@ -283,7 +283,7 @@
 		}
 		#axis > .scale > li.in{
 			background-color: #00f;
-			width: 36px;
+			width: 40px;
 		}
 		
 		#axis > .arrows{
@@ -499,7 +499,7 @@
 			</div>
 		</section>
 		
-		<footer>
+		<footer style="display: none;">
 			<script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1280239115'%3E%3C/span%3E%3Cscript src='https://s4.cnzz.com/z_stat.php%3Fid%3D1280239115%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script>
 		</footer>
 		
