--- a/online_2D.html
+++ b/online_2D.html
@@ -398,6 +398,10 @@ function resize(){
 }
 resize();
 //$(window).resize(resize);
+
+document.addEventListener("plusready", function(){
+	plus.navigator.setStatusBarBackground("#aef");
+}, false);
 </script>
 <script>
 $("html").addClass("fadeIn");
