--- a/one_3D.html
+++ b/one_3D.html
@@ -453,6 +453,7 @@ $(window).resize(function(){
 
 document.addEventListener("plusready", function(){
 	plus.navigator.setStatusBarBackground("#aef");
+	plus.navigator.setStatusBarStyle("dark");
 }, false);
 </script>
 <script>
