--- a/rooms.html
+++ b/rooms.html
@@ -442,6 +442,7 @@
 <script>
 document.addEventListener("plusready", function(){
 	plus.navigator.setStatusBarBackground("#aef");
+	plus.navigator.setStatusBarStyle("dark");
 }, false);
 </script>
 <script>
