--- a/two_2D.html
+++ b/two_2D.html
@@ -343,6 +343,7 @@ resize();
 
 document.addEventListener("plusready", function(){
 	plus.navigator.setStatusBarBackground("#aef");
+	plus.navigator.setStatusBarStyle("dark");
 }, false);
 </script>
 <script>
