--- a/online_2D.html
+++ b/online_2D.html
@@ -401,6 +401,7 @@ resize();
 
 document.addEventListener("plusready", function(){
 	plus.navigator.setStatusBarBackground("#aef");
+	plus.navigator.setStatusBarStyle("dark");
 }, false);
 </script>
 <script>
