--- a/online_3D.html
+++ b/online_3D.html
@@ -514,6 +514,7 @@ $(window).resize(function(){
 
 document.addEventListener("plusready", function(){
 	plus.navigator.setStatusBarBackground("#aef");
+	plus.navigator.setStatusBarStyle("dark");
 }, false);
 </script>
 <script>
